gcc/testsuite/gdc.test/fail_compilation/test8751.d
Bar foo3(ref const int x) pure {
    return y => x > y; // error
}
